--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'iran';
+    src: url('./assets/fonts/IRANSans_Medium.ttf') ;
+}
+@font-face {
+    font-family: 'vazir';
+    src: url('./assets/fonts/Vazir-Medium-FD.woff') ;
+}
+@layer components {
+    .flex-center{
+        @apply flex items-center
+    }
+}
+
+
+
